crates/hir-ty/tests/snapshots/jls_source_level__case_null_at_20_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/CaseNull.java:
package com.example;

class A {
    void m(Object o) {
        switch (o) {
            case null -> {}
            default -> {}
        }
    }
}

@5:12: feature-not-supported-in-source-level: null in switch cases is not supported in -source 20 (use -source 21 or higher to enable null in switch cases)
