crates/hir-ty/tests/snapshots/jls_source_level__case_null_at_21_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/CaseNull.java:
package com.example;

class A {
    void m(Object o) {
        switch (o) {
            case null -> {}
            default -> {}
        }
    }
}
