crates/hir-ty/tests/snapshots/jls_source_level__declared_try_resource_at_8_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/DeclaredResource.java:
package com.example;

class A {
    void m(java.io.Reader r) throws Exception {
        try (java.io.Reader local = r) {
        }
    }
}
