crates/hir-ty/tests/snapshots/jls_source_level__diamond_anonymous_at_8_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/DiamondAnonymous.java:
package com.example;

class A {
    void m() {
        Runnable r = new Runnable<>() {
            public void run() {
            }
        };
    }
}

@4:21: feature-not-supported-in-source-level: '<>' with anonymous inner classes is not supported in source level 8 (use source level 9 or higher to enable '<>' with anonymous inner classes)
