crates/hir-ty/tests/snapshots/jls_source_level__diamond_anonymous_at_9_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/DiamondAnonymous.java:
package com.example;

class A {
    void m() {
        Runnable r = new Runnable<>() {
            public void run() {
            }
        };
    }
}
