crates/hir-ty/tests/snapshots/jls_source_level__diamond_on_a_named_class_at_8_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PlainDiamond.java:
package com.example;

class A {
    void m() {
        java.util.List<String> l = new java.util.ArrayList<>();
    }
}
