crates/hir-ty/tests/snapshots/jls_source_level__explicit_type_at_8_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/ExplicitType.java:
package com.example;

class A {
    void m() {
        int x = 1;
    }
}
