crates/hir-ty/tests/snapshots/jls_source_level__instanceof_pattern_at_16_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/InstanceofPattern.java:
package com.example;

class A {
    void m(Object o) {
        if (o instanceof String s) {
        }
    }
}
