crates/hir-ty/tests/snapshots/jls_source_level__modules_at_8_are_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/module-info.java:
module m {
    requires java.base;
}

@0:0: feature-not-supported-in-source-level: modules are not supported in source level 8 (use source level 9 or higher to enable modules)
