crates/hir-ty/tests/snapshots/jls_source_level__modules_at_9_are_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/module-info.java:
module m {
    requires java.base;
}
