crates/hir-ty/tests/snapshots/jls_source_level__nested_distinct_constructs_are_both_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/Nested.java:
package com.example;

sealed class A permits B {
    record B(int x) implements java.io.Serializable {}
}

final class C extends A {
}

@2:0: feature-not-supported-in-source-level: sealed classes are not supported in source level 15 (use source level 17 or higher to enable sealed classes)
@3:4: feature-not-supported-in-source-level: records are not supported in source level 15 (use source level 16 or higher to enable records)
